# NotNotchFilter

./: .gitignore  .gitmodules  CMakeLists.txt  HangingValley.jucer  NotNotchFilter.jucer  README.md  project.config
Binaries/Mac/NotNotchFilter.component/Contents/: Info.plist
Binaries/Mac/NotNotchFilter.component/Contents/Resources/: NotNotchFilter.rsrc
Binaries/Mac/NotNotchFilter.vst/Contents/MacOS/: NotNotchFilter
Builds/Linux/: Makefile
Builds/MacOSX/: Info.plist
Builds/MacOSX/HangingValley.xcodeproj/: project.pbxproj
Builds/MacOSX/HangingValley.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Builds/MacOSX/NotNotchFilter.xcodeproj/: project.pbxproj
Builds/MacOSX/NotNotchFilter.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Builds/VisualStudio2010/: HangingValley.sln  HangingValley.vcxproj  HangingValley.vcxproj.filters  NotNotchFilter.sln  NotNotchFilter.vcxproj  NotNotchFilter.vcxproj.filters  resources.rc
Builds/VisualStudio2013/: NotNotchFilter.sln  NotNotchFilter.vcxproj  NotNotchFilter.vcxproj.filters  resources.rc
Graphics/: NotNotchFilter.pxm  NotNotchFilter.xcf  background.xcf
JuceLibraryCode/: AppConfig.h  JuceHeader.h
JuceLibraryCode/modules/juce_core/system/: juce_PlatformDefs.h
Misc/: NotNotchFilter.gcx
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ValleyParameter.h
